# llvm2scratch.rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  diff_compare.py  pyproject.toml
.github/workflows/: ci.yml
data/targets/: scratch3.toml  turbowarp3.toml
examples/: compile.py
examples/complex/: complex_aggregate_return.c  complex_arith.c  complex_arrays.c  complex_control.c  complex_float.c  complex_globals.c  complex_indirect_call.c  complex_loops.c  complex_ptr.c  complex_recursion.c  complex_setjmp.c  complex_structs.c  complex_switch.c
examples/input/: pen_demo.c  pen_gfx.h  pi_demo.c  vararg.ll
examples/rust_only/: aggregate_load_store.ll  setjmp_snapshot.ll  shufflevector.ll
llvm2scratch/: compiler.py  graph_util.py  ir.py  optimizer.py  parser.py  scratch.py  target.py
scripts/: README.md  check_fixture_parity.py  check_stress_parity.py  compare_project_json_strict.py  compare_py_rs_fixtures.sh  compare_py_rs_main.sh  generate_complex_programs.sh  inspect_pen_demo_init.py  run_diff_tests.sh  run_vm_tests.sh  strict_parity.py
src/: lib.rs  main.rs
src/compiler/: binop.rs  config.rs  graph_util.rs  memory.rs  mod.rs  translate.rs  twos_complement.rs  variable.rs
src/graph_util/: cycle.rs  dominator.rs  mod.rs
src/ir/: instructions.rs  mod.rs  types.rs  values.rs
src/optimizer/: assignment_elision.rs  known_value_prop.rs  mod.rs
src/parser/: llvm_decode.rs  llvm_in_rust.rs  mod.rs  token_util.rs
src/scratch/: ast.rs  export.rs  mod.rs  stringify.rs  uid.rs
tests/: README.md  diff_test.py  scratchblocks_diff_test.py  scratchblocks_stress_diff_test.py  vm_execution_test.py
tests/vm/: package.json  run_sb3.js  strict_project_json_comparison_report.md
tests/vm/fixtures/: aggregate_load_store_vm.json  aggregate_load_store_vm.ll  arithmetic_vm.json  arithmetic_vm.ll  array_sum_vm.json  array_sum_vm.ll  complex_aggregate_return_vm.json  complex_aggregate_return_vm.ll  complex_arith_vm.json  complex_arith_vm.ll  complex_arrays_vm.json  complex_arrays_vm.ll  complex_indirect_call_vm.json  complex_indirect_call_vm.ll  complex_loops_vm.json  complex_loops_vm.ll  complex_ptr_vm.json  complex_ptr_vm.ll  complex_recursion_vm.json  complex_recursion_vm.ll  complex_setjmp_vm.json  complex_setjmp_vm.ll  complex_structs_vm.json  (+28 more)
