[package]
name = "llvm2scratch"
version = "0.1.0"
description = "An LLVM backend to convert LLVM IR to MIT Scratch."
authors = ["NeuronPulse"]
license = "MIT"
edition = "2024"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm19-1-force-dynamic"] }
nom = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
indexmap = "2"
petgraph = "0.6"
zip = "2"
serde_json = "1"
md-5 = "0.10"
thiserror = "2"
rand = "0.9"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies]
proptest = "1"

[lib]
name = "llvm2scratch"
path = "src/lib.rs"

[[bin]]
name = "llvm2scratch"
path = "src/main.rs"