[tool.poetry]
name = "llvm2scratch"
version = "0.1.0"
description = "An LLVM backend to convert LLVM IR to MIT Scratch."
authors = ["NeuronPulse"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llvm2scratch" }]

[tool.poetry.dependencies]
python = ">=3.12"
llvmlite = "^0.45.0"
ordered-set = "^4.1.0"
numpy = "^2.4.4"
scipy = "^1.17.1"
igraph = "^1.0.0"
dacite = "^1.9.2"

[tool.poetry.scripts]
llvm2scratch = "llvm2scratch.cli:main"

[tool.pyrefly]
project-includes = [
  "**/*.py*",
  "**/*.ipynb",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"